Refactoring / progress / etc

--- a/code/tcrp_model/model/find_max_run.ipynb
+++ b/code/tcrp_model/model/find_max_run.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f560cc33-aa02-4090-af9c-542927093ddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,44 +11,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b22eaf56-3f25-4d3c-9b87-42ae974938e5",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "drug = \"Paclitaxel\"\n",
-    "tissue=\"GSE25066_Breast\"\n",
-    "dataset=\"GDSC1_GSE25066\"\n",
+    "drug = \"Axitinib\"\n",
+    "tissue=\"PDTC\"\n",
+    "dataset=\"GDSC1_PDTC\"\n",
+    "results_dir = \"/scratch/ashah/TCRP_Reusability_Report/results\"\n",
     "#objective_val = 0.450983333"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5e2456f3-349c-4c14-9dd5-4729aa4b11a7",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_list = []\n",
-    "for i in os.listdir(f\"/root/capsule/results/{dataset}_predictions/{drug}/{tissue}/\"):\n",
-    "    f = open(f\"/root/capsule/results/{dataset}_predictions/{drug}/{tissue}/{i}/log.txt\", \"r\")\n",
+    "for i in os.listdir(f\"{results_dir}/{dataset}_predictions/{drug}/{tissue}/\"):\n",
+    "    f = open(f\"{results_dir}/{dataset}_predictions/{drug}/{tissue}/{i}/log.txt\", \"r\")\n",
     "    file_list.append([i.strip() for i in f.readlines()])\n",
     "\n",
     "zero_cors = [float(i[-1].split(f\",\")[-1]) for i in file_list]\n",
-    "dir_list = os.listdir(f\"/root/capsule/results/{dataset}_predictions/{drug}/{tissue}/\")"
+    "dir_list = os.listdir(f\"{results_dir}/{dataset}_predictions/{drug}/{tissue}/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d5eff7f9-8f6a-4430-bf4f-3e68d3781bfc",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best zero corr is 0.001_0.001_1_12\n"
+      "Best zero corr is 0.1_0.01_2_12\n"
      ]
     }
    ],
@@ -59,25 +56,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1fe33c6d-d1a7-4a96-ad60-04e097c2a55a",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = os.listdir(f\"/root/capsule/results/{dataset}/run-logs/{drug}/{tissue}/\")"
+    "files = os.listdir(f\"{results_dir}/{dataset}/TCRP_performances/{drug}/{tissue}/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7545856f-8711-4776-ae5c-787e82694486",
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0xb1 in position 15: invalid start byte",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-45e635d5df05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{results_dir}/{dataset}/TCRP_performances/{drug}/{tissue}/\"\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0mmean_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0mmean_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.7/codecs.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, input, final)\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0;31m# decode input (taking the buffer into account)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    321\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 322\u001b[0;31m         \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconsumed\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffer_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfinal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    323\u001b[0m         \u001b[0;31m# keep undecoded input until the next call\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    324\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mconsumed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xb1 in position 15: invalid start byte"
+     ]
+    }
+   ],
    "source": [
     "mean_list = []\n",
     "for i in files:\n",
     "    if i != '.ipynb_checkpoints':\n",
-    "        f = open(f\"/root/capsule/results/{dataset}/run-logs/{drug}/{tissue}/\"+ i, \"r\")\n",
+    "        f = open(f\"{results_dir}/{dataset}/TCRP_performances/{drug}/{tissue}/\"+ i, \"r\")\n",
     "        try:\n",
     "            mean_list.append(float(f.readlines()[0].split(' ')[-1].strip()))\n",
     "        except IndexError:\n",
@@ -87,7 +95,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9c11a6f0-84df-4701-978c-5c689718be3a",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +112,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "de89ad28",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e081a0d8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -131,7 +136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   },
   "vscode": {
    "interpreter": {
